<resources>
    <string name="app_name">Dawly</string>
    <string name="facebook_app_id">397168864377979</string>
    <string name="fb_login_protocol_scheme">fb397168864377979</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="loading">Loading</string>
    <string name="continue_with_facebook">Continue with facebook</string>
    <string name="continue_with_email">Continue with email</string>
    <string name="sign_in_with_google">Sign in with google</string>
    <string name="eng">ENG</string>
    <string name="orders">Orders</string>
    <string name="add">Add Orders</string>
    <string name="messages">Messages</string>
    <string name="menu">Menu</string>
    <string name="step_1">Step 1</string>
    <string name="enter_item_link">Enter Item Link or press NEXT to enter details manualy</string>
    <string name="next">NEXT</string>
    <string name="step_2">Step 2</string>
    <string name="login">Login</string>
    <string name="sign_in_small">Sign In</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="forget_pass">Forget the password?</string>
    <string name="phone_number">Phone Number</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="i_agree">I agree to Dawly\'s terms of \n Service and Privacy Policy</string>
    <string name="country">Country</string>
    <string name="weight">Weight</string>
    <string name="item_name">Item Name</string>
    <string name="item_link">Item Link</string>
    <string name="continue_">Continue</string>
    <string name="name">Name</string>
    <string name="expires">Expires</string>
    <string name="cvc">CVC</string>
    <string name="card_number">Card Number</string>
    <string name="preview">Preview</string>
    <string name="payment">Payment:</string>
    <string name="location">Location:</string>
    <string name="weight_">Weight:</string>
    <string name="date_">Date:</string>
    <string name="item_name_">Item Name:</string>
    <string name="item_link_">Item Link:</string>
    <string name="your_flight_">Your flight is processed</string>
    <string name="flights">Flights</string>
    <string name="my_flights">My Flights</string>
    <string name="unable_to_carry">Unable to Carry:</string>
    <string name="guns">GUNS</string>
    <string name="drugs">DRUGS</string>
    <string name="people">PEOPLE</string>
    <string name="animals">ANIMALS</string>
    <string name="for_successfull_verification">For successful verification please place your documents in a dedicated area</string>
    <string name="scan_zone">Scan Zone</string>
    <string name="start_scanning">Start Scanning</string>
    <string name="bank_account_country">Bank Account Country</string>
    <string name="name_of_bank">Name of Bank</string>
    <string name="beneficiary_name">Beneficiary Name</string>
    <string name="account_number_iban_number">Account Number/IBAN Number</string>
    <string name="routing_number">Routing Number</string>
    <string name="swift_code">Swift Code/Bin</string>
    <string name="bank_account">Bank Account</string>
    <string name="submit">Submit</string>
    <string name="skip_for_now">Skip for now</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="from_">From:</string>
    <string name="to_">To:</string>
    <string name="the_weight_available">The Weight Available</string>
    <string name="items_unable_to_carry">Items unable to carry</string>
    <string name="date">Date</string>
    <string name="send_request">Send Request</string>
    <string name="weight_available">Weight Available:</string>
    <string name="items_unable">Items Unable \n to carry</string>
    <string name="done">Done</string>
    <string name="congratulation">Congratulation.</string>
    <string name="payout_to">Payout to:</string>
    <string name="my_orders">My Orders</string>
    <string name="total_orders">Total Orders</string>
    <string name="active_orders">Active Orders</string>
    <string name="pending_orders">Pending Orders</string>
    <string name="current_status">Current Status:</string>
    <string name="my_account">My Account</string>
    <string name="terms">Terms of Service</string>
    <string name="help_center">Help Center</string>
    <string name="safety">Trust &amp; Safety</string>
    <string name="contact_support">Contact Support</string>
    <string name="confirm">Confirm</string>
    <string name="license_key">eyJzY29wZSI6WyJBTEwiXSwicGxhdGZvcm0iOlsiaU9TIiwiQW5kcm9pZCIsIldpbmRvd3MiXSwidmFsaWQiOiIyMDE5LTA0LTE0IiwibWFqb3JWZXJzaW9uIjozLCJtYXhEYXlzTm90UmVwb3J0ZWQiOjUsInNob3dXYXRlcm1hcmsiOnRydWUsInBpbmdSZXBvcnRpbmciOnRydWUsImRlYnVnUmVwb3J0aW5nIjoib3B0LW91dCIsInRvbGVyYW5jZURheXMiOjUsInNob3dQb3BVcEFmdGVyRXhwaXJ5Ijp0cnVlLCJpb3NJZGVudGlmaWVyIjpbImNvbS5kYXdseS5hcHAiXSwiYW5kcm9pZElkZW50aWZpZXIiOlsiY29tLmRhd2x5LmFwcCJdLCJ3aW5kb3dzSWRlbnRpZmllciI6WyJjb20uZGF3bHkuYXBwIl19CmZhaGZoTFV4bHZ5K0M4RXhiTi9ON0t5TDNVMVBNQUtwaU0wbmxHaGh1eVlueUMrMUJvUG9ReXlpVnd4WUZxV0JmbmZYZUsvTjhObGN4dmZCT3dqTFMybUx0aUJuUUhLT2JwMVZMSUtlMENMU2FDbEhRM2hlZDBOclRpOFRvUGRLT2VOUG1abm1COS9pb1N3ZHhOMUpvRVYveUozWkRSTmZIdjR6R005eWZZTmV4MkJISkJqRFBzWXJTakFxbzZMZUdFTzNQcTVkYjhFNXp0Z25VaEVzWTI1c1VvTkxXeDkxaTNkdkM0ZkR6Zm1YMUdFK3pUd2VGZS9HNldhME91MnRPdjU4Y1FSQ21hdGlQWFFyTTlXT0hZSlo2Q1owSzExSVlnZk1KQWpObklYWllIZTdsQzV6NmVRWFU0WFFKU0E5Y21Dclp5a2ZsUkxjdTV3UHJXOWMxUT09</string>
    <string name="action_settings">Settings</string>
    <string name="policy">Privacy Policy</string>
    <string name="document">Document</string>
    <string name="document_advanced_outline_detection">Advanced Outline Detection</string>
    <string name="document_fast_outline_detection">Fast Outline Detection</string>
    <string name="document_error_not_sharp">Document is not sharp. Please hold the camera steadily and ensure the document is in focus</string>
    <string name="document_error_skew_too_high">Document is skewed. Place the camera directly above the document</string>
    <string name="document_error_outline_not_found">Could not detect document outline</string>
    <string name="document_error_glare_detected">Please remove the glare</string>
    <string name="document_error_too_dark">The image is too dark. Please ensure there is enough light</string>
    <string name="document_error_unknown">Unknown Failure</string>
    <string name="document_picture_error">Error scanning full document:\n</string>
    <string name="document_preview_success">Scanning full document. Please hold still</string>
    <string name="document_picture_success">Document scanned successfully</string>
    <string name="document_using_fast_mode">Switched to fast detection mode</string>
    <string name="document_using_advanced_mode">Switched to advanced detection mode</string>
    <string name="document_processing_picture">Processing the Picture. Please wait</string>
    <string name="document_processing_picture_header">Processing</string>
    <string name="document_image_saved_to">Image saved to</string>
    <string name="title_mrz">MRZ</string>
    <string name="mrz_given_names">Given Name</string>
    <string name="mrz_sur_names">Surname</string>
    <string name="mrz_document_type">Document Type</string>
    <string name="mrz_sex">Sex</string>
    <string name="mrz_country_code">Nationality</string>
    <string name="mrz_document_number">Document Number</string>
    <string name="mrz_expiration_date">Expiration Date</string>
    <string name="mrz_date_of_birthday">Date of Birth</string>
    <string name="not_available">Not Available</string>
    <string name="not_valid">Not Valid</string>
    <string name="mrz_address">Address</string>
    <string name="issue_date">Issuing Date</string>
    <string name="personal_number">Personal Number</string>
    <string name="driving_license_given_names">First Name</string>
    <string name="driving_license_sur_names">Last Name</string>
    <string name="driving_license_DOB">Date of Birth</string>
    <string name="driving_license_document_code">Document Number</string>
    <string name="driving_license_authority">Authority</string>
    <string name="driving_license_POB">Place of Birth</string>
    <string name="driving_license_categories">Categories</string>
    <string name="driving_license_issuing_date">Issuing Date</string>
    <string name="driving_license_expiring_date">Expiration Date</string>
    <string name="title_driving_license">AUT/GER Driving License</string>
    <string name="category_energy">Meter Reading</string>
    <string name="reading_result">Reading result</string>
    <string name="barcode">Barcode / QR-Code</string>
    <string name="add_flight">Add Flight</string>
    <string name="add_order">Add Order</string>
    <string name="new_request_notification">New request notification</string>
    <string name="new_order_notification">New order notification</string>
    <string name="dawly_notification">Dawly Notification</string>
    <string name="new_message_notification">New Message Notification</string>
    <string name="light_theme">Light Theme</string>
    <string name="logout">Logout</string>
    <string name="next_step">Next Step</string>
    <string name="in_transit">In Transit</string>
    <string name="received">Received</string>
    <string name="placed">PLaced</string>
    <string name="delivered">Delivered</string>
    <string name="add_tracking">Add Tracking</string>
    <string name="waiting_for_travels">Waiting for Travels</string>
    <string name="close">Close</string>
    <string name="add_to_your_luggage">Add to your luggage</string>
    <string name="email_is_required">email is required</string>
    <string name="invalid_email">invalid email</string>
    <string name="password_is_required">password is required</string>
    <string name="first_name_is_required">First name is required</string>
    <string name="last_name_is_required">Last name is required</string>
    <string name="first_name_is_too_short">First name is too short</string>
    <string name="last_name_is_too_short">Last name is too short</string>
    <string name="at_least_6_digit">at least 6 digit</string>
    <string name="at_least_one_lower_case_letter">at least one lower case letter</string>
    <string name="at_least_one_upper_case_letter">at least one uppear case letter</string>
    <string name="password_is_not_matched">Password is not matched</string>
    <string name="phone_is_required">phone is required</string>
    <string name="invalid_phone">phone is required</string>
    <string name="user_not_Found">User not Found</string>
    <string name="loged_in_with_facebook_succefully">loged in with facebook successfully</string>
    <string name="skip">Skip</string>
    <string name="tutorial_1_header">What is Dawly?</string>
    <string name="tutorial_1_body">Traveling with Dawly gives you the opportunity of making money while traveling, By
        earning a flat fee for each pound of free weight in your luggage you not only could be traveling for FREE, You
        could be earning up to 4x your trip cost.
    </string>
    <string name="tutorial_2_header">Shop with Dawly and save money.</string>
    <string name="tutorial_2_body">Shopping with Dawly doesnt only bring the world to you, It also allows you to save
        money on various fees like Shipping, Taxes, Customs, Duties, Brokerage fees, etc..
    </string>
    <string name="tutorial_3_header">Travel with Dawly and make money.</string>
    <string name="amount_and_currency">Amount and currency</string>
</resources>