<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_orders"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/orders"/>

    <item
            android:id="@+id/navigation_flights"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/flights"/>

    <item
            android:id="@+id/navigation_add_orders"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/add"/>
    <item
            android:id="@+id/navigation_messages"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/title_notifications"/>
    <item
            android:id="@+id/navigation_menu"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_notifications"/>
</menu>
