<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:attrs="http://schemas.android.com/tools"
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.v7.widget.CardView
            android:id="@+id/step2Card"
            app:cardCornerRadius="@dimen/_15dp"
            android:layout_marginStart="@dimen/_40dp"
            android:layout_marginEnd="@dimen/_40dp"
            android:layout_marginTop="@dimen/_20dp"
            android:layout_marginBottom="@dimen/_30dp"
            android:layout_above="@+id/pageIndicatorView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPost"
            app:cardBackgroundColor="@color/colorLogin">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <com.dawly.app.views.DawlyTextViewBold
                    android:id="@+id/step2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_15dp"
                    android:textSize="26sp"
                    android:textColor="@color/colorHeader"
                    android:text="@string/step_1"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
            app:cardCornerRadius="@dimen/_15dp"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_marginEnd="@dimen/_20dp"
            android:layout_marginTop="@dimen/_70dp"
            android:layout_marginBottom="@dimen/_30dp"
            android:layout_above="@+id/pageIndicatorView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPost"
            app:cardBackgroundColor="@color/colorPost">


        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <com.dawly.app.views.DawlyEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@+id/itemImg"
                    android:layout_marginStart="@dimen/_20dp"
                    android:layout_marginEnd="@dimen/_20dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:layout_marginTop="@dimen/_20dp"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/colorHeader"/>

            <com.dawly.app.views.DawlyEditText
                    android:id="@+id/expires"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@+id/itemImg"
                    android:layout_below="@+id/name"
                    android:layout_marginStart="@dimen/_20dp"
                    android:layout_marginEnd="@dimen/_20dp"
                    android:hint="@string/expires"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <com.dawly.app.views.DawlyEditText
                    android:id="@+id/cvc"
                    android:layout_below="@+id/expires"
                    android:layout_marginStart="@dimen/_20dp"
                    android:layout_marginEnd="@dimen/_20dp"
                    android:hint="@string/cvc"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@+id/itemImg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


        </RelativeLayout>


    </android.support.v7.widget.CardView>

    <com.rd.PageIndicatorView
            android:id="@+id/pageIndicatorView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="@dimen/_10dp"
            app:piv_animationType="worm"
            app:piv_dynamicCount="true"
            app:piv_select="1"
            android:layout_above="@+id/continueBtn"
            app:piv_interactiveAnimation="true"
            app:piv_selectedColor="#35a6b7"
            app:piv_unselectedColor="#bfcefa"
            attrs:piv_padding="10dp"
            attrs:piv_radius="5dp"/>

    <com.dawly.app.views.DawlyButtonBold
            android:id="@+id/continueBtn"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_marginEnd="@dimen/_20dp"
            android:layout_marginBottom="@dimen/_20dp"
            android:text="@string/continue_"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:background="@drawable/continue_gradient_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


</RelativeLayout>