<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:id="@+id/bank_amount_currencyLayout"
        android:layout_height="wrap_content">

    <com.dawly.app.views.DawlyButtonBold
            android:id="@+id/btn_bank_amount_currency"
            android:text="@string/amount_and_currency"
            android:textAllCaps="false"
            android:gravity="center"
            android:textSize="15sp"
            android:visibility="visible"
            android:layout_marginTop="@dimen/_20dp"
            android:layout_width="match_parent"
            android:textStyle="bold"
            android:background="@drawable/sign_up_ng"
            android:textColor="@color/colorHeader"
            android:layout_marginEnd="@dimen/_60dp"
            android:layout_marginStart="@dimen/_60dp"
            android:layout_height="@dimen/_60dp"/>

    <android.support.v7.widget.CardView
            android:visibility="visible"
            app:cardCornerRadius="@dimen/_15dp"
            android:layout_below="@id/btn_bank_amount_currency"
            android:layout_marginTop="-30dp"
            app:cardElevation="@dimen/_10dp"
            app:cardUseCompatPadding="true"
            android:id="@+id/bank_amount_currencycard"
            app:cardBackgroundColor="@color/cardBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


            <android.support.design.widget.TextInputLayout
                    android:id="@+id/bank_amount_currency_bank_account_info_Input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <com.dawly.app.views.DawlyEditText
                        android:id="@+id/bank_amount_currency_bank_account_country"
                        android:maxLines="1"
                        android:maxLength="50"
                        android:textSize="15sp"
                        android:digits="غظضذخثتشرقصجفعسنملةىكيطئءؤحزوهدبا abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                        android:inputType="textCapCharacters"
                        android:hint="@string/bank_account_country"
                        android:textColor="@color/colorHeader"
                        android:layout_marginEnd="@dimen/_20dp"
                        android:layout_marginStart="@dimen/_20dp" android:textColorHint="@color/colorHeader"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/last_name_Input"
                    android:layout_width="match_parent"
                    android:layout_below="@+id/bank_amount_currency_bank_account_info_Input"
                    android:layout_height="wrap_content">

                <com.dawly.app.views.DawlyEditText
                        android:id="@+id/et_sign_up_last_name"
                        android:maxLines="1"
                        android:maxLength="50"
                        android:textSize="15sp"
                        android:inputType="textCapCharacters"
                        android:digits="غظضذخثتشرقصجفعسنملةىكيطئءؤحزوهدبا abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                        android:layout_marginEnd="@dimen/_20dp"
                        android:layout_marginStart="@dimen/_20dp"
                        android:textColorHint="@color/colorHeader"
                        android:hint="@string/lastname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/bank_amount_currency_passwordInput"
                    android:layout_width="match_parent"
                    android:layout_below="@+id/last_name_Input"
                    android:layout_height="wrap_content">

                <com.dawly.app.views.DawlyEditText
                        android:id="@+id/bank_amount_currency_password"
                        android:inputType="textPassword"
                        android:textSize="15sp"
                        android:textColor="@color/colorHeader"
                        android:layout_marginEnd="@dimen/_20dp"
                        android:layout_marginStart="@dimen/_20dp"
                        android:textColorHint="@color/colorHeader"
                        android:hint="@string/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/bank_amount_currency_confirm_passwordInput"
                    android:layout_width="match_parent"
                    android:layout_below="@+id/bank_amount_currency_passwordInput"
                    android:layout_height="wrap_content">

                <com.dawly.app.views.DawlyEditText
                        android:id="@+id/bank_amount_currency_confirm_password"
                        android:inputType="textPassword" android:textColor="@color/colorHeader"
                        android:layout_marginEnd="@dimen/_20dp"
                        android:textSize="15sp"
                        android:layout_marginStart="@dimen/_20dp"
                        android:textColorHint="@color/colorHeader"
                        android:hint="@string/confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/bank_amount_currency_email_Input"
                    android:layout_width="match_parent"
                    android:layout_below="@+id/bank_amount_currency_confirm_passwordInput"
                    android:layout_height="wrap_content">

                <com.dawly.app.views.DawlyEditText
                        android:id="@+id/bank_amount_currency_email"
                        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789@_.-"
                        android:maxLength="30"
                        android:textSize="15sp"
                        android:maxLines="1"
                        android:inputType="textCapCharacters"
                        android:textColor="@color/colorHeader"
                        android:layout_marginEnd="@dimen/_20dp"
                        android:layout_marginStart="@dimen/_20dp"
                        android:textColorHint="@color/colorHeader"
                        android:hint="@string/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
            </android.support.design.widget.TextInputLayout>


        </RelativeLayout>


    </android.support.v7.widget.CardView>

</RelativeLayout>
